@@ -19,8 +19,10 @@ apport (0.120) UNRELEASED; urgency=low
     finding them!
   * problem_report.py test suite: Create debugging leftover which left /tmp/r
     behind.
+  * apport/crashdb_impl/memory.py: Use example.com, not bug.net, since the
+    latter actually exists now.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Nov 2008 18:12:23 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 21 Nov 2008 21:37:48 +0100
 
 apport (0.119) intrepid; urgency=low
 
